feat(core): Reimplemented Zeek logs collection to improve scalability and remote host deployability
